--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -58,6 +58,8 @@ Metadata:
         default: Message Routing Node Instance Type
       WorkerNodeStorage:
         default: Persistent Storage
+      WorkerNodeStorageType:
+        default: Persistent Storage Type
       MonitorNodeInstanceType:
         default: Monitor Node Instance Type
       KeyPairName:
@@ -174,6 +176,14 @@ Parameters:
       - '320'
       - '640'
     Type: Number
+  WorkerNodeStorageType:
+    Default: 'gp2'
+    Description: Storage volume type provided by Amazon EBS. "io1" is recommended for Production environments (better performance, more expensive)
+      and is required for large storage size.
+    AllowedValues:
+      - 'gp2'
+      - 'io1'
+    Type: String
   KeyPairName:
     Description: Name of an existing EC2 key pair within the AWS region; all instances
       will launch with this key pair
@@ -324,6 +334,7 @@ Resources:
         MaxQueueMessages: !Ref 'MaxQueueMessages'
         WorkerNodeInstanceType: !Ref 'WorkerNodeInstanceType'
         WorkerNodeStorage: !Ref 'WorkerNodeStorage'
+        WorkerNodeStorageType: !Ref 'WorkerNodeStorageType'
         MonitorNodeInstanceType: !Ref 'MonitorNodeInstanceType'
         KeyPairName: !Ref 'KeyPairName'
         QSS3BucketName: !Ref 'QSS3BucketName'
