--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -16,6 +16,7 @@ Metadata:
           - MaxQueueMessages
           - WorkerNodeInstanceType
           - WorkerNodeStorage
+          - WorkerNodeStorageType
           - MonitorNodeInstanceType
           - ContainerLoggingFormat
       - Label:
