--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Copy test artifacts to test S3 bucket
       run: |
         MESSAGEBROKERNODEINSTANCETYPE=t2.medium
-        sed -i "s@SolaceDockerImageParameterValue@${{ secrets.BROKER_DOCKER_IMAGE_REF }}@g" ci/solace-aws-ha-3az-prod-test.json
+        sed -i "s@SolaceDockerImageParameterValue@solace/solace-pubsub-standard:latest@g" ci/solace-aws-ha-3az-prod-test.json
         sed -i "s@EventBrokerNodeInstanceTypeParameterValue@${MESSAGEBROKERNODEINSTANCETYPE}@g" ci/solace-aws-ha-3az-prod-test.json
         aws s3 mb s3://${{ env.TEST_S3_BUCKET }} || echo "s3 bucket already existed"
         export BUCKETREGION=`aws s3api get-bucket-location --bucket ${{ env.TEST_S3_BUCKET }} | grep LocationConstraint | awk -F' ' '{print $NF}' | tr -d '"'`
@@ -91,24 +91,24 @@ jobs:
         stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep StackId | awk -F '"' '{print $4}')"
         if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
 
-    - name: Testing with No Private Subnet
-      run: |
-        export TESTSTACKNAME2="$TESTSTACKNAME-1"
-        echo "TESTSTACKNAME2=$TESTSTACKNAME2" >> $GITHUB_ENV
-        sed -i "s@true@false@g" ci/solace-aws-ha-3az-prod-test.json
-        aws cloudformation create-stack --stack-name $TESTSTACKNAME2 --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-test.json --on-failure ROLLBACK --capabilities CAPABILITY_NAMED_IAM
-        echo "Waiting for stack create complete"
-        until aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
-        aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME2
-        aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2
-
-    - name: Delete No Private Subnet test deployment (Cleanup)
-      if: ${{ always() }}
-      run: |
-        aws cloudformation delete-stack --stack-name $TESTSTACKNAME2 || echo "Couldn't delete stack $TESTSTACKNAME2"
-        echo "Waiting for stack delete complete"
-        stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep StackId | awk -F '"' '{print $4}')"
-        if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
+#    - name: Testing with No Private Subnet
+#      run: |
+#        export TESTSTACKNAME2="$TESTSTACKNAME-1"
+#        echo "TESTSTACKNAME2=$TESTSTACKNAME2" >> $GITHUB_ENV
+#        sed -i "s@true@false@g" ci/solace-aws-ha-3az-prod-test.json
+#        aws cloudformation create-stack --stack-name $TESTSTACKNAME2 --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-test.json --on-failure ROLLBACK --capabilities CAPABILITY_NAMED_IAM
+#        echo "Waiting for stack create complete"
+#        until aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
+#        aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME2
+#        aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2
+#
+#    - name: Delete No Private Subnet test deployment (Cleanup)
+#      if: ${{ always() }}
+#      run: |
+#        aws cloudformation delete-stack --stack-name $TESTSTACKNAME2 || echo "Couldn't delete stack $TESTSTACKNAME2"
+#        echo "Waiting for stack delete complete"
+#        stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep StackId | awk -F '"' '{print $4}')"
+#        if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
 
     - name: Update QuickStart S3 on success for SolaceProducts
       if: ${{ success() }} && github.event_name == 'push'
@@ -116,3 +116,8 @@ jobs:
         if [ ${{ github.ref }} == 'refs/heads/master' ] && [ ${{ github.repository_owner }} == 'SolaceProducts' ] ; then
           aws s3 sync . s3://solace-products/pubsubplus-aws-ha-quickstart/latest --acl public-read
         fi
+
+    - name: Delete all unattached volumes (Cleanup)
+      if: ${{ always() }}
+      run: |
+        for volume in `aws ec2 describe-volumes --filter "Name=status,Values=available" --query "Volumes[*].{ID:VolumeId}" --region $AWS_DEFAULT_REGION | grep ID | awk -F '"' '{print $4}'`; do aws ec2 delete-volume --volume-id $volume --region $AWS_DEFAULT_REGION; done
