--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -16,6 +16,7 @@ Metadata:
           - MaxQueueMessages
           - WorkerNodeInstanceType
           - WorkerNodeStorage
+          - WorkerNodeStorageType
           - MonitorNodeInstanceType
           - ContainerLoggingFormat
       - Label:
@@ -58,6 +59,8 @@ Metadata:
         default: Message Routing Node Instance Type
       WorkerNodeStorage:
         default: Persistent Storage
+      WorkerNodeStorageType:
+        default: Persistent Storage Type
       MonitorNodeInstanceType:
         default: Monitor Node Instance Type
       KeyPairName:
@@ -174,6 +177,14 @@ Parameters:
       - '320'
       - '640'
     Type: Number
+  WorkerNodeStorageType:
+    Default: 'gp2'
+    Description: Storage volume type provided by Amazon EBS. "io1" is recommended for Production environments (better performance, more expensive)
+      and is required for large storage size.
+    AllowedValues:
+      - 'gp2'
+      - 'io1'
+    Type: String
   KeyPairName:
     Description: Name of an existing EC2 key pair within the AWS region; all instances
       will launch with this key pair
@@ -244,7 +255,7 @@ Resources:
     Properties:
       TemplateURL:
         !Sub
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-aws-vpc/templates/aws-vpc.template'
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
@@ -252,11 +263,9 @@ Resources:
           - ','
           - !Ref 'AvailabilityZones'
         CreatePrivateSubnets: !Ref 'CreatePrivateSubnets'
-        KeyPairName: !Ref 'KeyPairName'
         NumberOfAZs: !Ref 'NumberOfAZs'
   BastionHostRole:
     Type: 'AWS::IAM::Role'
-    Condition: UsePrivateSubnets
     Properties:
       Path: /
       AssumeRolePolicyDocument:
@@ -326,6 +335,7 @@ Resources:
         MaxQueueMessages: !Ref 'MaxQueueMessages'
         WorkerNodeInstanceType: !Ref 'WorkerNodeInstanceType'
         WorkerNodeStorage: !Ref 'WorkerNodeStorage'
+        WorkerNodeStorageType: !Ref 'WorkerNodeStorageType'
         MonitorNodeInstanceType: !Ref 'MonitorNodeInstanceType'
         KeyPairName: !Ref 'KeyPairName'
         QSS3BucketName: !Ref 'QSS3BucketName'
