--- a/.github/workflows/build-vpc-test.yml
+++ b/.github/workflows/build-vpc-test.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Extract branch name for non PR
       if: github.event_name != 'pull_request'
       shell: bash
-      run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+      run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr _. - )" >> $GITHUB_ENV
       id: extract_branch
     - name: Extract branch name for PR
       if: github.event_name == 'pull_request'
-      run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF})" >> $GITHUB_ENV
+      run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | tr _. -)" >> $GITHUB_ENV
     - name: Set env
       run: |
         echo "AWS_DEFAULT_REGION=eu-west-1" >> $GITHUB_ENV
