SOL-70258 | New VPC CIDR Parameter to access health check port (#13)

--- a/templates/setup_sample_new_vpc.template
+++ b/templates/setup_sample_new_vpc.template
@@ -183,6 +183,9 @@ Outputs:
   VPCID:
     Description: VPC ID
     Value: !GetAtt 'VPCStack.Outputs.VPCID'
+  VPCCIDR:
+    Description: VPC CIDR
+    Value: !GetAtt 'VPCStack.Outputs.VPCCIDR'
   PrivateSubnet1ID:
     Description: Private VPC Subnet 1
     Value: !GetAtt 'VPCStack.Outputs.PrivateSubnet1AID'
