--- a/templates/solace.template
+++ b/templates/solace.template
@@ -20,6 +20,7 @@ Metadata:
           default: Network Configuration
         Parameters:
           - VPCID
+          - VPCCIDR
           - VPCAccessOnly
           - NumberOfAZs
           - UsePrivateSubnets
@@ -73,6 +74,8 @@ Metadata:
         default: VPC internal access only
       VPCID:
         default: VPC ID
+      VPCCIDR:
+        default: VPC CIDR
       PrivateSubnetIDs:
         default: Private Subnet IDs
       PublicSubnetIDs:
@@ -240,6 +243,12 @@ Parameters:
   VPCID:
     Description: ID of the VPC (e.g. vpc-0343606e)
     Type: AWS::EC2::VPC::Id
+  VPCCIDR:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
+    ConstraintDescription: Private VPC CIDR block parameter must be in the form x.x.x.x/x
+    Description: Allowed CIDR block for the VPC
+    Default: '0.0.0.0/0'
+    Type: String
   QSS3BucketName:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
     ConstraintDescription: Quick Start bucket name can include numbers, lowercase
@@ -481,7 +490,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: 5550
           ToPort: 5550
-          CidrIp: '0.0.0.0/0'
+          CidrIp: !Ref 'VPCCIDR'
         - IpProtocol: tcp
           FromPort: 55555
           ToPort: 55555
