--- a/templates/solace.template
+++ b/templates/solace.template
@@ -210,7 +210,7 @@ Parameters:
   RemoteAccessCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
-    Description: Allowed CIDR block for external access to broker cluster nodes
+    Description: Allowed CIDR block for access to broker services
     Type: String
   MonitorNodeInstanceType:
     AllowedValues:
@@ -246,7 +246,7 @@ Parameters:
   VPCCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
     ConstraintDescription: Private VPC CIDR block parameter must be in the form x.x.x.x/x
-    Description: Allowed CIDR block for the VPC
+    Description: The CIDR block configured for the VPC
     Default: '0.0.0.0/0'
     Type: String
   QSS3BucketName:
